Added start of JS extension. Added EventInstance wrapper funcs

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ GameMakerStudio2/extensions/GMFmodStudio/GMFmodStudio_x64.exp
 GameMakerStudio2/extensions/GMFmodStudio/GMFmodStudio_x64.ilk
 GameMakerStudio2/extensions/GMFmodStudio/GMFmodStudio_x64.lib
 GameMakerStudio2/extensions/GMFmodStudio/GMFmodStudio_x64.pdb
+GameMakerStudio2/extensions/GMFmodStudio/GMFmodStudio_ext.js
 GameMakerStudio2/extensions/GMFmodStudio/fmod.dll/
 GameMakerStudio2/extensions/GMFmodStudio/fmodL.dll/
 GameMakerStudio2/extensions/GMFmodStudio/fmodstudio.dll/
